# nodeutils

./: .env.example  .gitignore  README.md  example.self_inventory.yaml  nautobot_self_register.py  nodeutils_collect.py  proxmox_inventory.py  pyproject.toml
tests/: test_inventory_report.py  test_proxmox_inventory.py
